OnboardingV2Minimal/force-app/main/default/objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>