OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Accessories_2_mo_prior__c.field-meta.xml
<CustomField>
    <fullName>Accessories_2_mo_prior__c</fullName>
    <label>* Accessory Sales 2 Mo. Prior</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>