OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Accessory_Region__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Region__c</fullName>
    <label>Accessory Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Accessory_Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HSEW</fullName>
            </value>
            <value>
                <fullName>WIMW</fullName>
            </value>
            <value>
                <fullName>WINE</fullName>
            </value>
            <value>
                <fullName>WINW</fullName>
            </value>
            <value>
                <fullName>WISC</fullName>
            </value>
            <value>
                <fullName>WISE</fullName>
            </value>
            <value>
                <fullName>WISW</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>DTVLATA</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MEX-CA</fullName>
            </value>
            <value>
                <fullName>OZ</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>S-Cone</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>WE</fullName>
            </value>
            <value>
                <fullName>NTH</fullName>
            </value>
            <value>
                <fullName>WST</fullName>
            </value>
            <value>
                <fullName>STH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>