OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Accessory_Sales_QTD__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Sales_QTD__c</fullName>
    <label>* Accessory Sales QTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>