OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Accessory_Territory__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Territory__c</fullName>
    <label>Accessory Territory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Accessory_Region__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFG</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AKW</fullName>
            </value>
            <value>
                <fullName>ALM</fullName>
            </value>
            <value>
                <fullName>ARE</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>ARGDTVLATA</fullName>
            </value>
            <value>
                <fullName>ARLA</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>BMU</fullName>
            </value>
            <value>
                <fullName>BOL</fullName>
            </value>
            <value>
                <fullName>BRA</fullName>
            </value>
            <value>
                <fullName>BRB</fullName>
            </value>
            <value>
                <fullName>CAH</fullName>
            </value>
            <value>
                <fullName>CAKW</fullName>
            </value>
            <value>
                <fullName>CALM</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CATX</fullName>
            </value>
            <value>
                <fullName>CCAS</fullName>
            </value>
            <value>
                <fullName>CCTN</fullName>
            </value>
            <value>
                <fullName>CFLG</fullName>
            </value>
            <value>
                <fullName>CHE</fullName>
            </value>
            <value>
                <fullName>CHL</fullName>
            </value>
            <value>
                <fullName>CHLDTVLATA</fullName>
            </value>
            <value>
                <fullName>CHN</fullName>
            </value>
            <value>
                <fullName>CILW</fullName>
            </value>
            <value>
                <fullName>CIMOK</fullName>
            </value>
            <value>
                <fullName>CIMOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>