OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <label>Account Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>