OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Competitive Sales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Dish</fullName>
            </value>
            <value>
                <fullName>DishNet</fullName>
            </value>
            <value>
                <fullName>DTV Commercial - NACE</fullName>
            </value>
            <value>
                <fullName>DTV Commercial - PDI</fullName>
            </value>
            <value>
                <fullName>DTV-DSI</fullName>
            </value>
            <value>
                <fullName>HughesNet</fullName>
            </value>
            <value>
                <fullName>HughesNet - RS&amp;I</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Vivint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>