OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ACH__c.field-meta.xml
<CustomField>
    <fullName>ACH__c</fullName>
    <label>ACH</label>
    <length>15</length>
    <type>Text</type>
</CustomField>