OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ADT_MTD__c.field-meta.xml
<CustomField>
    <fullName>ADT_MTD__c</fullName>
    <label>* Security MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>