OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ADT_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>ADT_Prior_Month__c</fullName>
    <label>* Security Prior Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>