OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Amount_Over_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Over_Credit_Limit__c</fullName>
    <label>* Amount Over Credit Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>