OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Application_Status_Base__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Base__c</fullName>
    <label>Application Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>