OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Appt_required__c.field-meta.xml
<CustomField>
    <fullName>Appt_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appt required</label>
    <type>Checkbox</type>
</CustomField>