OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Area_Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Area_Sales_Director__c</fullName>
    <description>DIRECTV Area Sales Director</description>
    <inlineHelpText>DIRECTV Area Sales Director</inlineHelpText>
    <label>Area Sales Director</label>
    <length>40</length>
    <type>Text</type>
</CustomField>