OnboardingV2Minimal/force-app/main/default/objects/Account/fields/As_of__c.field-meta.xml
<CustomField>
    <fullName>As_of__c</fullName>
    <description>Date of upload of dealer accessories and LS</description>
    <inlineHelpText>Date of batch update for Sales Information.</inlineHelpText>
    <label>* As of</label>
    <type>Date</type>
</CustomField>