OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ASM__c.field-meta.xml
<CustomField>
    <fullName>ASM__c</fullName>
    <description>DIRECTV Area Sales Manager</description>
    <inlineHelpText>DIRECTV Area Sales Manager</inlineHelpText>
    <label>ASM LSP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>