OnboardingV2Minimal/force-app/main/default/objects/Account/fields/AT_T_ASM_Managed__c.field-meta.xml
<CustomField>
    <fullName>AT_T_ASM_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AT&amp;T ASM Managed</label>
    <type>Checkbox</type>
</CustomField>