OnboardingV2Minimal/force-app/main/default/objects/Account/fields/AT_T_Mobility_Lines_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Mobility_Lines_Prior_Month__c</fullName>
    <label>* AT&amp;T Mobility Prior Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>