OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ATT_Footprint__c.field-meta.xml
<CustomField>
    <fullName>ATT_Footprint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>denotes when a dealer is in an AT&amp;T footprint area</description>
    <label>* ATT Footprint</label>
    <type>Checkbox</type>
</CustomField>