OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Available_FSL_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Available_FSL_Vendors__c</fullName>
    <description>This field shows which vendors the dealer can work with in FSL. (PVFSL-181)</description>
    <inlineHelpText>This field shows which vendors the dealer can work with in FSL.</inlineHelpText>
    <label>Available FSL Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_Vendors</valueSetName>
    </valueSet>
</CustomField>