OnboardingV2Minimal/force-app/main/default/objects/Account/fields/AX_Setup__c.field-meta.xml
<CustomField>
    <fullName>AX_Setup__c</fullName>
    <label>AX Setup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>