OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Baackground_Check_Activated_Count__c.field-meta.xml
<CustomField>
    <fullName>Baackground_Check_Activated_Count__c</fullName>
    <label>Background Check Activated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>