OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <label>Background Check</label>
    <length>15</length>
    <type>Text</type>
</CustomField>