OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Bad_Debt__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt__c</fullName>
    <label>Bad Debt?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>