OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Base_Account_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Base_Account_Application_Status__c</fullName>
    <label>Base Account Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Paperwork Sent</fullName>
            </value>
            <value>
                <fullName>Pending Initial Review</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Pending Sales</fullName>
            </value>
            <value>
                <fullName>Setup Complete</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>