OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <label>Business License</label>
    <length>15</length>
    <type>Text</type>
</CustomField>