OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Field used to identify PV dealers vs non pv dealers. (Like DCC)</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perfect Vision</fullName>
                <default>true</default>
                <label>Perfect Vision</label>
            </value>
            <value>
                <fullName>Direct Connect Connections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>