OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Carrier_preference__c.field-meta.xml
<CustomField>
    <fullName>Carrier_preference__c</fullName>
    <label>Carrier preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>