OnboardingV2Minimal/force-app/main/default/objects/Account/fields/CenturyLink_COM_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>CenturyLink_COM_Prior_Month__c</fullName>
    <label>* CenturyLink COM Prior Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>