OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Charter_Offshore_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Charter_Offshore_Approved_Date__c</fullName>
    <label>Spectrum Offshore Approved Date</label>
    <type>Date</type>
</CustomField>