OnboardingV2Minimal/force-app/main/default/objects/Account/fields/CLINK_CORP_ID__c.field-meta.xml
<CustomField>
    <fullName>CLINK_CORP_ID__c</fullName>
    <description>CenturyLink Corp ID for this account</description>
    <label>* CLINK-CORP ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>