OnboardingV2Minimal/force-app/main/default/objects/Account/fields/CLINK_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>CLINK_Prior_Month__c</fullName>
    <description>CenturyLink Sales Total - Prior Month</description>
    <label>* CenturyLink RES Prior Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>