OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Co_op_About_to_Expire_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Co_op_About_to_Expire_Current_Month__c</fullName>
    <label>AT&amp;T Video Co-op to Expire This Month</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>