OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>