OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Compliance_App_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_App_Status__c</fullName>
    <label>Compliance App Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>