OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Compliance_Status_Activated_Count__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status_Activated_Count__c</fullName>
    <label>Compliance Status Activated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>