OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Consent_to_Automated_Communications__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Automated_Communications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PER-3836</description>
    <label>Consent to Automated Communications</label>
    <type>Checkbox</type>
</CustomField>