OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Consultation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Completed__c</fullName>
    <label>Consultation Completed</label>
    <type>Date</type>
</CustomField>