OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <label>Credit Analyst</label>
    <length>50</length>
    <type>Text</type>
</CustomField>