OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <label>Credit Check</label>
    <length>15</length>
    <type>Text</type>
</CustomField>