OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Credit_Risk__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk__c</fullName>
    <description>If credit check is failed, completed, or waived a Credit Risk rating must be selected</description>
    <label>Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>