OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount__c</fullName>
    <label>* Current Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>