OnboardingV2Minimal/force-app/main/default/objects/Account/fields/D2D_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>D2D_Location_ID__c</fullName>
    <externalId>true</externalId>
    <label>D2D Location ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>