OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Date_TMZ_Login_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_TMZ_Login_Sent__c</fullName>
    <label>Date TMZ Login Sent</label>
    <type>Date</type>
</CustomField>