OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DBA_Approved__c.field-meta.xml
<CustomField>
    <fullName>DBA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DBA Approved</label>
    <type>Checkbox</type>
</CustomField>