OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Dealer_Consultation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Consultation_Notes__c</fullName>
    <label>Dealer Consultation Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>