OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Department_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_GL_Code__c</fullName>
    <label>Department GL Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>