OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Digital_Marketing_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Follow_up__c</fullName>
    <label>Digital Marketing Follow up</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Day</fullName>
            </value>
            <value>
                <fullName>60 Day</fullName>
            </value>
            <value>
                <fullName>90 Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>