OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Digital_Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Notes__c</fullName>
    <label>Digital Marketing Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>