OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Digital_Marketing_Types__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Types__c</fullName>
    <label>Digital Marketing Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Paid Search</fullName>
                <label>SEM</label>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
                <label>SMM</label>
            </value>
            <value>
                <fullName>SMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>