OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DIRECTV_Offshore_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>DIRECTV_Offshore_Approved_Date__c</fullName>
    <label>DIRECTV Offshore Approved Date</label>
    <type>Date</type>
</CustomField>