OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DIRECTV_Offshore_Approved_Location__c.field-meta.xml
<CustomField>
    <fullName>DIRECTV_Offshore_Approved_Location__c</fullName>
    <label>DIRECTV Offshore Approved Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>