OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DIRECTV_Offshore_Status__c.field-meta.xml
<CustomField>
    <fullName>DIRECTV_Offshore_Status__c</fullName>
    <label>DIRECTV Offshore Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Dealer Signature</fullName>
            </value>
            <value>
                <fullName>Pending PV Review</fullName>
            </value>
            <value>
                <fullName>Pending Partner Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>