OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DIRECTV_Via_Satellite_Restriction__c.field-meta.xml
<CustomField>
    <fullName>DIRECTV_Via_Satellite_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DIRECTV Via Satellite Restriction</label>
    <type>Checkbox</type>
</CustomField>