OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Discuss_DIRECTV_New_Dealer_Marketing_Fun__c.field-meta.xml
<CustomField>
    <fullName>Discuss_DIRECTV_New_Dealer_Marketing_Fun__c</fullName>
    <label>Discuss DIRECTV New Dealer Marketing Fun</label>
    <type>Date</type>
</CustomField>