OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Discuss_Google_Business_Listing__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Google_Business_Listing__c</fullName>
    <label>Discuss Google Business Listing</label>
    <type>Date</type>
</CustomField>