OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Discuss_Marketing_Monthly_Calender__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Marketing_Monthly_Calender__c</fullName>
    <label>Discuss Marketing Monthly Calender</label>
    <type>Date</type>
</CustomField>