OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Discuss_Retargeting_Emails__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Retargeting_Emails__c</fullName>
    <label>Discuss Retargeting Emails</label>
    <type>Date</type>
</CustomField>