OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Program Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>KEY</fullName>
            </value>
            <value>
                <fullName>INTL</fullName>
                <isActive>false</isActive>
                <label>INTL</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>WIRE</fullName>
                <isActive>false</isActive>
                <label>WIRE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>