OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Division_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Division_Lead_Source__c</fullName>
    <label>Division Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>INTL</fullName>
            </value>
            <value>
                <fullName>WIRE</fullName>
            </value>
            <value>
                <fullName>KEY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>